-fix : search doesn't work when user clear input charachter by charachter. -fix : make scrollbar back for better experiance

--- a/learn-react/src/index.css
+++ b/learn-react/src/index.css
@@ -22,9 +22,6 @@
 }
 
 @layer base {
-    html {
-        @apply hide-scrollbar;
-    }
 
     body {
         font-family: "DM Sans", serif;
